# reddit-daily-news

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: reddit_daily_news.yml
common/: issue.py  reddit.py
test/: praw.ini  test_reddit.py
