[tool.poetry]
name = "reddit-daily-news"
version = "0.1.0"
description = ""
authors = ["Xunjie Liu <xunjieliu97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
